fanout-ingress-devtron.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress-devtron
  namespace: arnoldas
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production
#    nginx.ingress.kubernetes.io/proxy-body-size: 32m
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - jupyter"
#    ingress.kubernetes.io/rewrite-target
spec:
  rules:
  - host: xcite-devtron.asrc.albany.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devtron-service
            port:
              number: 80

  tls:
    - hosts:
      - xcite-devtron.asrc.albany.edu
      secretName: secret-devtron
---
